[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyRedTools"
version = "0.0.1"
authors = [
  { name="Yvan Pannatier", email="pannatieryvan94@gmail.com" },
]
description = "Python package containing generic tools that can be used in various situations."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yvpa/pyRedTools"
"Bug Tracker" = "https://github.com/yvpa/pyRedTools/issues"